infra/k8s/zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
              name: zookeeper-port
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  selector:
    app: zookeeper
  type: ClusterIP
  ports:
    - port: 2181
      name: zookeeper-port
      protocol: TCP
