infra/k8s/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: applications

spec:
  rules:
  - host: iprs.com
    http:
      paths:
        - path: /graphql
          pathType: ImplementationSpecific
          backend:
            service:
              name: iprs-service
              port:
                number: 9191
